made all the necessary changes to make it responsive in smaller devices

--- a/app.json
+++ b/app.json
@@ -4,12 +4,12 @@
     "slug": "SMARTIC-PRO",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icon2.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/icon2.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#070945"
     },
     "ios": {
       "supportsTablet": true
